--- a/src/pages/chat-page.html
+++ b/src/pages/chat-page.html
@@ -11,7 +11,7 @@
   <div id="app">
     <main class="chat-page">
       {{> chats }}
-      {{> empty-chat-feed }}
+      {{> chat-feed }}
     </main>
   </div>
   
