--- a/src/pages/profile-page.html
+++ b/src/pages/profile-page.html
@@ -10,9 +10,9 @@
 <body>
   <div id="app">
     <main class="profile-page">
-      <nav class="navigation">
-        <a href="#"></a>
-      </nav>
+      <div class="navigation">
+        {{> button-back }}
+      </div>
       <div class="profile">
         {{> avatar }}
         <span class="name">Иван</span>
@@ -22,7 +22,7 @@
           {{> profile-input label="Имя" name="first_name" type="text" placeholder="Иван" }}
           {{> profile-input label="Фамилия" name="second_name" type="text" placeholder="Иванов" }}
           {{> profile-input label="Имя в чате" name="display_name" type="text" placeholder="Иван" }}
-          {{> profile-input label="Телефон" name="phone" type="text" placeholder="+7 (909) 967 30 30" }}
+          {{> profile-input label="Телефон" name="phone" type="number" placeholder="+7(909)9673030" }}
         </div>
         <div class="buttons">
           {{> button-link href="#" action="Изменить данные" }}
