--- a/src/pages/login-page.html
+++ b/src/pages/login-page.html
@@ -17,7 +17,7 @@
           {{> form-input label="Пароль" name="password" type="password" placeholder="Пароль" }}
         </div>
         {{> button-action action="Войти" }}
-        {{> button-link href="#" action="Нет аккаунта?" }}
+        {{> button-link href="./signup-page" action="Нет аккаунта?" }}
       {{/page-form}}
     </main>
   </div>
