--- a/src/pages/non-found-page.html
+++ b/src/pages/non-found-page.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../../style.css">
-  <title>Signup</title>
+  <title>Error</title>
 </head>
 <body>
   <div id="app">
