--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <div id="app">
     <main class="main-page">
       <nav>
-        <a href="src/pages/login-page.html">Авторизация</a>
-        <a href="src/pages/signup-page.html">Регистрация</a>
-        <a href="src/pages/chat-page.html">Список чатов и лента переписки</a>
-        <a href="src/pages/profile-page.html">Профиль пользователя</a>
-        <a href="src/pages/non-found-page.html"> Страница 5**</a>
-        <a href="src/pages/error-page.html">Страница 404</a>
+        <ul>
+          <li><a href="src/pages/login-page.html">Авторизация</a></li>
+          <li><a href="src/pages/signup-page.html">Регистрация</a></li>
+          <li><a href="src/pages/chat-page.html">Список чатов и лента переписки</a></li>
+          <li><a href="src/pages/profile-page.html">Профиль пользователя</a></li>
+          <li><a href="src/pages/non-found-page.html"> Страница 5**</a></li>
+          <li><a href="src/pages/error-page.html">Страница 404</a></li>
+        </ul>
       </nav>
     </main>
   </div>
