--- a/src/pages/change-profile-password-page.html
+++ b/src/pages/change-profile-password-page.html
@@ -17,9 +17,9 @@
         {{> avatar }}
         <span class="name">Иван</span>
         <div class="info">
-          {{> profile-input label="Старый пароль" name="oldPassword" type="password" placeholder="password" }}
-          {{> profile-input label="Новый пароль" name="newPassword" type="password" placeholder="password" }}
-          {{> profile-input label="Повторите новый пароль" name="newPassword" type="password" placeholder="password" }}
+          {{> profile-input label="Старый пароль" name="oldPassword" type="password" placeholder="Старый пароль" value="password" }}
+          {{> profile-input label="Новый пароль" name="newPassword" type="password" placeholder="Новый пароль" value="password" }}
+          {{> profile-input label="Повторите новый пароль" name="newPassword" type="password" placeholder="Повторите новый пароль" value="password" }}
         </div>
         {{> button-action action="Сохранить" }}
       </div>
