--- a/src/pages/change-profile-info-page.html
+++ b/src/pages/change-profile-info-page.html
@@ -14,7 +14,9 @@
         {{> button-back href="./profile-page" }}
       </div>
       <div class="profile">
-        {{> avatar }}
+        <div class="avatar-wrapper">
+          {{> avatar }}
+        </div>
         <span class="name">Иван</span>
         <div class="info">
           {{> profile-input label="Почта" name="email" type="email" placeholder="Почта" value="pochta@yandex.ru" }}
@@ -27,8 +29,6 @@
         {{> button-action action="Сохранить" }}
       </div>
     </main>
-  </div>
-  
-  <!-- <script type="module" src="../../index.js"></script> -->
+  </div>  
 </body>
 </html>
