--- a/src/pages/change-profile-password-page.html
+++ b/src/pages/change-profile-password-page.html
@@ -14,7 +14,9 @@
         {{> button-back href="./profile-page" }}
       </div>
       <div class="profile">
-        {{> avatar }}
+        <div class="avatar-wrapper">
+          {{> avatar }}
+        </div>
         <span class="name">Иван</span>
         <div class="info">
           {{> profile-input label="Старый пароль" name="oldPassword" type="password" placeholder="Старый пароль" value="password" }}
@@ -24,8 +26,6 @@
         {{> button-action action="Сохранить" }}
       </div>
     </main>
-  </div>
-  
-  <!-- <script type="module" src="../../index.js"></script> -->
+  </div>  
 </body>
 </html>
