--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
   <div id="app">
-    <main class="main-page">
+    <main class="error-page">
+      {{> error title="404" subtitle="Не туда попали" }}
+      {{> button-link href="#" action="Назад к чатам" }}
+    </main>
+    <!-- <main class="main-page">
       <nav>
         <ul>
           <li><a href="src/pages/login-page.html">Авторизация</a></li>
@@ -20,7 +24,7 @@
           <li><a href="src/pages/error-page.html">Страница 404</a></li>
         </ul>
       </nav>
-    </main>
+    </main> -->
   </div>
 </body>
 </html>
