--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 </head>
 <body>
   <div id="app">
-    <main class="error-page">
-      {{> error title="404" subtitle="Не туда попали" }}
-      {{> button-link href="#" action="Назад к чатам" }}
-    </main>
-    <!-- <main class="main-page">
+    <main class="main-page">
       <nav>
         <ul>
           <li><a href="src/pages/login-page.html">Авторизация</a></li>
@@ -24,7 +20,7 @@
           <li><a href="src/pages/error-page.html">Страница 404</a></li>
         </ul>
       </nav>
-    </main> -->
+    </main>
   </div>
 </body>
 </html>
