--- a/src/pages/non-found-page.html
+++ b/src/pages/non-found-page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="app">
-    <main class="non-found-page">
+    <main class="non-found-page" id="non-found-page">
       {{> error title="500" subtitle="Мы уже фиксим" }}
       {{> button-link href="#" action="Назад к чатам" }}
     </main>
