--- a/src/pages/profile-page.html
+++ b/src/pages/profile-page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="app">
-    <main class="profile-page">
+    <main class="profile-page" id="profile-page">
       <div class="navigation">
         {{> button-back href="./chat-page" }}
       </div>
@@ -44,6 +44,6 @@
       {{/page-form}}
     {{/modal}}
   </div>
-  <script src="../modules/profile-page.js"></script>  
+  <script src="../../modules/profile-page.js"></script>  
 </body>
 </html>
