--- a/src/pages/signup-page.html
+++ b/src/pages/signup-page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="app">
-    <main class="signup-page">
+    <main class="signup-page" id="signup-page">
       {{#> page-form name="login-form" id="login-form" }}
         <p class="title">Регистрация</p>
         <div class="form-inputs">
