--- a/src/pages/non-found-page.html
+++ b/src/pages/non-found-page.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div id="app">
-    <main class="non-found-page" id="non-found-page">
-      {{> error title="500" subtitle="Мы уже фиксим" }}
+    <main class="error-page">
+      {{> error title="404" subtitle="Не туда попали" }}
       {{> button-link href="#" action="Назад к чатам" }}
     </main>
   </div>
