--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <li><a href="src/pages/signup-page.html">Регистрация</a></li>
           <li><a href="src/pages/chat-page.html">Список чатов и лента переписки</a></li>
           <li><a href="src/pages/profile-page.html">Профиль пользователя</a></li>
-          <li><a href="src/pages/non-found-page.html"> Страница 5**</a></li>
-          <li><a href="src/pages/error-page.html">Страница 404</a></li>
+          <li><a href="src/pages/non-found-page.html"> Страница 404</a></li>
+          <li><a href="src/pages/error-page.html">Страница 5**</a></li>
         </ul>
       </nav>
     </main>
